--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,13 @@
         <body>
             <div id="container">
                 <div id="cabecera">
+                    <img id="logo" src="Imagenes/dragon.png"/>
                     Hyperblog
-                    <span id="tagline">Tu blog de confianza</span>
+                    <span id="tagline">Tu blog de confianza no tiene problemas</span>
                 </div>
             
                 <div id="Post">
-                    <h1>Este es el titulo atractivo e interesante del post actual que me presenta problemas</h1>
+                    <h1>Este es el titulo atractivo e interesante del post prueba</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles que se pueden hacer con ramas</p> 
                     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora. Para saber más al respecto sigamos aprendiendo.</p>
                     <p>Suscribete y dale like, please</p>
