--- a/blogpost.html
+++ b/blogpost.html
@@ -5,9 +5,9 @@
         <body>
             <div id="container">
                 <div id="cabecera">
-                    <img id="logo" src="imagenes/dragon.png" />
+                    <img id="logo" src="Imagenes/dragon.png"/>
                     Hyperblog
-                    <span id="tagline">Tu blog de confianza</span>
+                    <span id="tagline"> Tu blog de confianza</span>
                 </div>
             
                 <div id="Post">
