--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8"/>
         <title>El titulo del post</title>
         <link rel="stylesheet" href="./CSS/stilos.css"/>
         <body>
@@ -11,8 +12,8 @@
                 </div>
             
                 <div id="Post">
-                    <h1>Este es el titulo atractivo e interesante del post actual que me presenta problemas</h1>
-                    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles que se pueden hacer con ramas</p> 
+                    <h1>Este es el título atractivo e interesante del post actual que me presenta problemas</h1>
+                    <p>Y este es el parráfo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
                     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora. Para saber más al respecto sigamos aprendiendo.</p>
                     <p>Suscribete y dale like, please</p>
                 </div>
