Cambio de tildes por entidades HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,9 +12,9 @@
                 </div>
             
                 <div id="Post">
-                    <h1>Este es el título atractivo e interesante del post actual que me presenta problemas</h1>
-                    <p>Y este es el parráfo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
-                    <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora. Para saber más al respecto sigamos aprendiendo.</p>
+                    <h1>Este es el t&iacute;tulo atractivo e interesante del post actual que me presenta problemas</h1>
+                    <p>Y este es el par&aacute;fo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p> 
+                    <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora. Para saber m&aacute;s al respecto sigamos aprendiendo.</p>
                     <p>Suscribete y dale like, please</p>
                 </div>
                 <div id="footer">
