--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                     <p>Y este es el par&aacute;fo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p> 
                     <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora. Para saber m&aacute;s al respecto sigamos aprendiendo.</p>
                     <p>Suscribete y dale like, please</p>
+                    <p>¡Gracias!</p>
                 </div>
                 <div id="footer">
                     Hecho con amor en Platzi &lt;3
